--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -38,6 +38,7 @@ const sortedPosts = posts.sort(
                                     <img
                                         src={post.data.featured_image}
                                         alt={post.data.title}
+                                        loading="lazy"
                                         class="h-full w-full object-cover transition-transform hover:scale-105"
                                     />
                                 </div>
